fix: Correct code calculate p-value

--- a/Linear_regression.ipynb
+++ b/Linear_regression.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,13 +62,13 @@
     "        \n",
     "        self.std_error = np.sqrt((sse/(n-p-1)) * Q.diagonal())\n",
     "        self.t_values = self.beta / self.std_error\n",
-    "        self.t_pvalues = [2*(1 - t.cdf(abs(i), p)) for i in self.t_values]\n",
+    "        self.t_pvalues = [2*(1 - t.cdf(abs(i), n-p-1)) for i in self.t_values]\n",
     "        \n",
     "    def predict(self, X):\n",
     "        X_ = np.append(np.ones((X.shape[0], 1)), X, axis=1)\n",
     "        return X.dot(self.beta)\n",
     "    \n",
-    "    def summary(self, feature_names = None):\n",
+    "    def summary(self, feature_names = None, round_decimals=3):\n",
     "        res_min = self.residual.min()\n",
     "        res_max = self.residual.max()\n",
     "        res_1q = np.quantile(self.residual, .25)\n",
@@ -77,12 +77,12 @@
     "        res = pd.DataFrame(np.array([res_min, res_1q, res_med, res_3q, res_max]).reshape(1,-1), columns = ['Residuals: Min', '1Q', 'Median', '3Q', 'Max'])\n",
     "        \n",
     "        if feature_names is None:\n",
-    "            feat_idx = ['x0(intercept)'] + ['x{}'.format(i) for i in range(1, n_features+1)]\n",
-    "            coef = pd.DataFrame(np.array([self.beta, self.std_error, self.t_values, self.t_pvalues]).T, index = feat_idx, columns= \n",
+    "            feat_idx = ['x0(INTCP)'] + ['x{}'.format(i) for i in range(1, n_features+1)]\n",
+    "            coef = pd.DataFrame(np.array([self.beta, self.std_error, self.t_values, np.round(self.t_pvalues, round_decimals)]).T, index = feat_idx, columns= \n",
     "                               ['coef.', 'std. error', 't_value', 'Pr(>|t|)'])\n",
     "        else:\n",
-    "            feat_idx = np.insert(feature_names, 0, '(intercept)')\n",
-    "            coef = pd.DataFrame(np.array([self.beta, self.std_error, self.t_values, self.t_pvalues]).T, index = feat_idx, columns= \n",
+    "            feat_idx = np.insert(feature_names, 0, '(INTCP)')\n",
+    "            coef = pd.DataFrame(np.array([self.beta, self.std_error, self.t_values, np.round(self.t_pvalues, round_decimals)]).T, index = feat_idx, columns= \n",
     "                               ['coef.', 'std. error', 't_value', 'Pr(>|t|)'])\n",
     "        \n",
     "        r2 = 'R-squared: {}, Adjusted R-squared: {}'.format(self.r_sq, self.adj_r)\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -140,21 +140,21 @@
       "   Residuals: Min        1Q    Median        3Q        Max\n",
       "0      -13.392716 -2.713732 -0.537744  1.537035  24.893577\n",
       "======================================================================\n",
-      "             coef.  std. error    t_value      Pr(>|t|)\n",
-      "(interc  22.522277    0.236767  95.124364  0.000000e+00\n",
-      "CRIM     -1.026701    0.312280  -3.287755  5.884746e-03\n",
-      "ZN        1.350413    0.375499   3.596319  3.254691e-03\n",
-      "INDUS     0.125577    0.462665   0.271420  7.903300e-01\n",
-      "CHAS      0.575228    0.245493   2.343150  3.567857e-02\n",
-      "NOX      -2.286092    0.499211  -4.579411  5.166942e-04\n",
-      "RM        2.130839    0.329607   6.464787  2.116878e-05\n",
-      "AGE       0.127024    0.425805   0.298316  7.701766e-01\n",
-      "DIS      -3.178567    0.485752  -6.543602  1.872082e-05\n",
-      "RAD       2.647306    0.675885   3.916797  1.769080e-03\n",
-      "TAX      -1.877813    0.741576  -2.532191  2.502111e-02\n",
-      "PTRATIO  -2.142964    0.323162  -6.631241  1.634591e-05\n",
-      "B         0.669374    0.275721   2.427723  3.046075e-02\n",
-      "LSTAT    -3.925510    0.413679  -9.489273  3.294069e-07\n",
+      "             coef.  std. error    t_value  Pr(>|t|)\n",
+      "(INTCP)  22.522277    0.236767  95.124364     0.000\n",
+      "CRIM     -1.026701    0.312280  -3.287755     0.001\n",
+      "ZN        1.350413    0.375499   3.596319     0.000\n",
+      "INDUS     0.125577    0.462665   0.271420     0.786\n",
+      "CHAS      0.575228    0.245493   2.343150     0.020\n",
+      "NOX      -2.286092    0.499211  -4.579411     0.000\n",
+      "RM        2.130839    0.329607   6.464787     0.000\n",
+      "AGE       0.127024    0.425805   0.298316     0.766\n",
+      "DIS      -3.178567    0.485752  -6.543602     0.000\n",
+      "RAD       2.647306    0.675885   3.916797     0.000\n",
+      "TAX      -1.877813    0.741576  -2.532191     0.012\n",
+      "PTRATIO  -2.142964    0.323162  -6.631241     0.000\n",
+      "B         0.669374    0.275721   2.427723     0.016\n",
+      "LSTAT    -3.925510    0.413679  -9.489273     0.000\n",
       "======================================================================\n",
       "Residual standard error: 22.647612986695794 on 390 degrees of freedom\n",
       "======================================================================\n",
