feat: Add code calculating confidence interval

--- a/Linear_regression.ipynb
+++ b/Linear_regression.ipynb
@@ -11,7 +11,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "from scipy.stats import t, f"
+    "from scipy.stats import t, f, norm"
    ]
   },
   {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
     "        X_ = np.append(np.ones((X.shape[0], 1)), X, axis=1)\n",
     "        return X.dot(self.beta)\n",
     "    \n",
-    "    def summary(self, feature_names = None, round_decimals=3):\n",
+    "    def summary(self, feature_names = None, round_decimals=3, alpha=0.05):\n",
     "        res_min = self.residual.min()\n",
     "        res_max = self.residual.max()\n",
     "        res_1q = np.quantile(self.residual, .25)\n",
@@ -76,14 +76,16 @@
     "        res_3q = np.quantile(self.residual, .75)\n",
     "        res = pd.DataFrame(np.array([res_min, res_1q, res_med, res_3q, res_max]).reshape(1,-1), columns = ['Residuals: Min', '1Q', 'Median', '3Q', 'Max'])\n",
     "        \n",
+    "        ci_lower = np.round(self.beta - self.std_error * t.ppf(1-alpha/2, self.n_samples - self.n_features -1), round_decimals)\n",
+    "        ci_upper = np.round(self.beta + self.std_error * t.ppf(1-alpha/2, self.n_samples - self.n_features -1), round_decimals)\n",
     "        if feature_names is None:\n",
     "            feat_idx = ['x0(INTCP)'] + ['x{}'.format(i) for i in range(1, n_features+1)]\n",
-    "            coef = pd.DataFrame(np.array([self.beta, self.std_error, self.t_values, np.round(self.t_pvalues, round_decimals)]).T, index = feat_idx, columns= \n",
-    "                               ['coef.', 'std. error', 't_value', 'Pr(>|t|)'])\n",
+    "            coef = pd.DataFrame(np.array([self.beta, self.std_error, self.t_values, np.round(self.t_pvalues, round_decimals), ci_lower, ci_upper]).T, index = feat_idx, columns= \n",
+    "                               ['coef.', 'std. error', 't_value', 'Pr(>|t|)', '{}% LWR'.format(int(100*(1-alpha))), '{}% UPR'.format(int(100*(1-alpha)))])\n",
     "        else:\n",
     "            feat_idx = np.insert(feature_names, 0, '(INTCP)')\n",
-    "            coef = pd.DataFrame(np.array([self.beta, self.std_error, self.t_values, np.round(self.t_pvalues, round_decimals)]).T, index = feat_idx, columns= \n",
-    "                               ['coef.', 'std. error', 't_value', 'Pr(>|t|)'])\n",
+    "            coef = pd.DataFrame(np.array([self.beta, self.std_error, self.t_values, np.round(self.t_pvalues, round_decimals), ci_lower, ci_upper]).T, index = feat_idx, columns= \n",
+    "                               ['coef.', 'std. error', 't_value', 'Pr(>|t|)', '{}% LWR'.format(int(100*(1-alpha))), '{}% UPR'.format(int(100*(1-alpha)))])\n",
     "        \n",
     "        r2 = 'R-squared: {}, Adjusted R-squared: {}'.format(self.r_sq, self.adj_r)\n",
     "        res_std_err = 'Residual standard error: {} on {} degrees of freedom'.format(self.mse, self.n_samples - self.n_features -1)\n",
@@ -100,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -140,21 +142,21 @@
       "   Residuals: Min        1Q    Median        3Q        Max\n",
       "0      -13.392716 -2.713732 -0.537744  1.537035  24.893577\n",
       "======================================================================\n",
-      "             coef.  std. error    t_value  Pr(>|t|)\n",
-      "(INTCP)  22.522277    0.236767  95.124364     0.000\n",
-      "CRIM     -1.026701    0.312280  -3.287755     0.001\n",
-      "ZN        1.350413    0.375499   3.596319     0.000\n",
-      "INDUS     0.125577    0.462665   0.271420     0.786\n",
-      "CHAS      0.575228    0.245493   2.343150     0.020\n",
-      "NOX      -2.286092    0.499211  -4.579411     0.000\n",
-      "RM        2.130839    0.329607   6.464787     0.000\n",
-      "AGE       0.127024    0.425805   0.298316     0.766\n",
-      "DIS      -3.178567    0.485752  -6.543602     0.000\n",
-      "RAD       2.647306    0.675885   3.916797     0.000\n",
-      "TAX      -1.877813    0.741576  -2.532191     0.012\n",
-      "PTRATIO  -2.142964    0.323162  -6.631241     0.000\n",
-      "B         0.669374    0.275721   2.427723     0.016\n",
-      "LSTAT    -3.925510    0.413679  -9.489273     0.000\n",
+      "             coef.  std. error    t_value  Pr(>|t|)  95% LWR  95% UPR\n",
+      "(INTCP)  22.522277    0.236767  95.124364     0.000   22.057   22.988\n",
+      "CRIM     -1.026701    0.312280  -3.287755     0.001   -1.641   -0.413\n",
+      "ZN        1.350413    0.375499   3.596319     0.000    0.612    2.089\n",
+      "INDUS     0.125577    0.462665   0.271420     0.786   -0.784    1.035\n",
+      "CHAS      0.575228    0.245493   2.343150     0.020    0.093    1.058\n",
+      "NOX      -2.286092    0.499211  -4.579411     0.000   -3.268   -1.305\n",
+      "RM        2.130839    0.329607   6.464787     0.000    1.483    2.779\n",
+      "AGE       0.127024    0.425805   0.298316     0.766   -0.710    0.964\n",
+      "DIS      -3.178567    0.485752  -6.543602     0.000   -4.134   -2.224\n",
+      "RAD       2.647306    0.675885   3.916797     0.000    1.318    3.976\n",
+      "TAX      -1.877813    0.741576  -2.532191     0.012   -3.336   -0.420\n",
+      "PTRATIO  -2.142964    0.323162  -6.631241     0.000   -2.778   -1.508\n",
+      "B         0.669374    0.275721   2.427723     0.016    0.127    1.211\n",
+      "LSTAT    -3.925510    0.413679  -9.489273     0.000   -4.739   -3.112\n",
       "======================================================================\n",
       "Residual standard error: 22.647612986695794 on 390 degrees of freedom\n",
       "======================================================================\n",
@@ -172,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -184,8 +186,8 @@
       "Dep. Variable:                  label   R-squared:                       0.729\n",
       "Model:                            OLS   Adj. R-squared:                  0.720\n",
       "Method:                 Least Squares   F-statistic:                     80.85\n",
-      "Date:                Fri, 30 Jul 2021   Prob (F-statistic):          5.53e-102\n",
-      "Time:                        23:52:57   Log-Likelihood:                -1196.4\n",
+      "Date:                Sun, 01 Aug 2021   Prob (F-statistic):          5.53e-102\n",
+      "Time:                        00:36:15   Log-Likelihood:                -1196.4\n",
       "No. Observations:                 404   AIC:                             2421.\n",
       "Df Residuals:                     390   BIC:                             2477.\n",
       "Df Model:                          13                                         \n",
