fix: Correct code calculating degrees of freedom

--- a/Welch_ttest.ipynb
+++ b/Welch_ttest.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,12 +24,13 @@
     "    s2 = a2.std(ddof=1)\n",
     "    n1 = a1.size\n",
     "    n2 = a2.size\n",
+    "    detail = (m1,m2,s1,s2,n1,n2)\n",
     "    \n",
     "    var_ = (s1**2 /n1) + (s2**2 /n2)\n",
     "    std_ = np.sqrt(var_)\n",
     "    \n",
     "    t_value = (m1-m2)/std_\n",
-    "    adof = var_**2 / ((s1/n1)**2/(n1-1) + (s2/n2)**2/(n2-1))\n",
+    "    adof = var_**2 / (((s1**2/n1)**2)/(n1-1) + ((s2**2/n2)**2)/(n2-1))\n",
     "    p_value = 2*(1-t.cdf(abs(t_value), adof))\n",
     "    \n",
     "    return np.array([t_value, p_value])"
@@ -37,53 +38,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "rng = np.random.default_rng(1)\n",
-    "a = rng.normal(0, 1., size=1000)\n",
-    "b = rng.normal(0, 1.6, size=2000)"
+    "a = rng.normal(0, 1., size=2000)\n",
+    "b = rng.normal(0, 1.6, size=3432)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Ttest_indResult(statistic=-1.6673187460737262, pvalue=0.09555548516035431)"
+       "True"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ttest_ind(a, b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-1.93847404,  0.05263713])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "welch(a, b)"
+    "np.isclose(ttest_ind(a, b, equal_var=False)[1], welch(a, b)[1])"
    ]
   },
   {
