--- a/Welch_ttest.ipynb
+++ b/Welch_ttest.ipynb
@@ -13,11 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def welch(a1, a2):\n",
+    "def welch_ttest(a1, a2):\n",
     "    m1 = a1.mean()\n",
     "    m2 = a2.mean()\n",
     "    s1 = a1.std(ddof=1)\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,8 +48,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Compare the two p-values calculated by scipy method and my code"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -58,13 +65,37 @@
        "True"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.isclose(ttest_ind(a, b, equal_var=False)[1], welch(a, b)[1])"
+    "np.isclose(ttest_ind(a, b, equal_var=False)[1], welch_ttest(a, b)[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rng = np.random.default_rng(3)\n",
+    "a = rng.normal(0, 1., size=1234)\n",
+    "b = rng.normal(0, 1.3, size=2345)\n",
+    "\n",
+    "np.isclose(ttest_ind(a, b, equal_var=False)[1], welch_ttest(a, b)[1])"
    ]
   },
   {
