feat: Create code for SelectFromModel algorithm

--- a/Feature_selection.ipynb
+++ b/Feature_selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,10 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.base import clone\n",
     "from sklearn.datasets import load_boston\n",
     "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
     "from sklearn.feature_selection import RFE, RFECV, SelectFromModel, SequentialFeatureSelector\n",
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,16 +97,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8978887301951419\n",
-      "2.449594452623559\n",
-      "0.13811741521385668\n"
+      "0.668759493535632\n",
+      "3.1890919658878483\n",
+      "0.16866394539378712\n"
      ]
     }
    ],
@@ -129,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,16 +204,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8922527442109116"
+       "0.8920995891343227"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,6 +461,167 @@
    ],
    "source": [
     "np.alltrue(features_support==sfs.support_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Select from model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sfm = SelectFromModel(estimator=model, threshold='mean')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False, False, False,  True, False, False, False,\n",
+       "       False, False, False,  True])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sfm.fit(X_train, y_train)\n",
+    "\n",
+    "sfm.get_support()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.07692307692307693"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sfm.threshold_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.07692307692307693"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.feature_importances_.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SFM:\n",
+    "    def __init__(self, estimator, strategy='mean'):\n",
+    "        self.estimator = clone(estimator)\n",
+    "        self.strategy = strategy\n",
+    "    \n",
+    "    def fit(self, X, y):\n",
+    "        self.estimator.fit(X, y)\n",
+    "        \n",
+    "    def get_support(self):\n",
+    "        try:\n",
+    "            self.importance = self.estimator.feature_importances_\n",
+    "        except:\n",
+    "            self.importance = np.abs(self.estimator.coef_.flatten())\n",
+    "            \n",
+    "        if self.strategy == 'mean':\n",
+    "            self.threshold = self.importance.mean()\n",
+    "        elif self.strategy == 'median':\n",
+    "            self.threshold = np.median(self.importance)\n",
+    "        else:\n",
+    "            self.threshold = self.strategy.copy()\n",
+    "            \n",
+    "        return self.importance > self.threshold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sfm0 = SFM(estimator=model, strategy='mean')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False, False, False,  True, False, False, False,\n",
+       "       False, False, False,  True])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sfm0.fit(X_train, y_train)\n",
+    "\n",
+    "sfm0.get_support()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.alltrue(sfm0.get_support() == sfm.get_support())"
    ]
   },
   {
