--- a/Feature_selection.ipynb
+++ b/Feature_selection.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,8 @@
     "from sklearn.datasets import load_boston\n",
     "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
     "from sklearn.feature_selection import RFE, RFECV, SelectFromModel, SequentialFeatureSelector\n",
-    "from sklearn.model_selection import train_test_split, cross_val_score\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score, KFold\n",
     "from sklearn.metrics import mean_absolute_error, mean_absolute_percentage_error\n",
     "from sklearn.preprocessing import StandardScaler, MinMaxScaler, RobustScaler, PolynomialFeatures"
    ]
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,19 +74,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7634174432138474\n",
+      "3.750712180838916\n",
+      "0.18776351124030624\n"
+     ]
+    }
+   ],
    "source": [
-    "rfe = RFECV(estimator=model_lr, cv=5, scoring='r2')\n",
+    "model_lr = LinearRegression()\n",
+    "model_lr.fit(X_train, y_train)\n",
     "\n",
-    "X_train = rfe.fit_transform(X_train, y_train)\n",
-    "X_test = rfe.transform(X_test)"
+    "pred_lr = model_lr.predict(X_test)\n",
+    "\n",
+    "print(model_lr.score(X_test, y_test))\n",
+    "print(mean_absolute_error(y_test, pred_lr))\n",
+    "print(mean_absolute_percentage_error(y_test, pred_lr))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,25 +112,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rfe = RFECV(estimator=model_lr, cv=5, scoring='r2')\n",
+    "\n",
+    "X_train = rfe.fit_transform(X_train, y_train)\n",
+    "X_test = rfe.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.668759493535632\n",
-      "3.1890919658878483\n",
-      "0.16866394539378712\n"
+      "0.7635982049770087\n",
+      "3.7379107553033477\n",
+      "0.18737837457744916\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.linear_model import LinearRegression\n",
-    "model_lr = LinearRegression()\n",
     "model_lr.fit(X_train, y_train)\n",
     "\n",
     "pred_lr = model_lr.predict(X_test)\n",
+    "\n",
     "print(model_lr.score(X_test, y_test))\n",
     "print(mean_absolute_error(y_test, pred_lr))\n",
     "print(mean_absolute_percentage_error(y_test, pred_lr))"
@@ -130,16 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = RandomForestRegressor(random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,39 +177,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rfe = RFECV(estimator=model_lr, cv=5, scoring='neg_mean_absolute_error')\n",
-    "\n",
-    "X_train = rfe.fit_transform(X_train, y_train)\n",
-    "X_test = rfe.transform(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 3, 4, 2, 1, 1, 5, 1, 1, 1, 1, 1, 1])"
+       "0.8920995891343227"
       ]
      },
-     "execution_count": 287,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rfe.ranking_"
+    "model = RandomForestRegressor(random_state=42)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "model.score(X_test, y_test, )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,75 +212,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8920995891343227"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.fit(X_train, y_train)\n",
-    "\n",
-    "model.score(X_test, y_test, )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "rfe = RFECV(estimator=model, cv=5, scoring='r2')\n",
-    "sfm = SelectFromModel(estimator=model, threshold='median')\n",
-    "sfs = SequentialFeatureSelector(estimator=model, n_features_to_select=7, scoring='r2')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RFECV(cv=5, estimator=RandomForestRegressor(random_state=42), scoring='r2')"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rfe.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train = rfe.transform(X_train)\n",
+    "\n",
+    "X_train = rfe.fit_transform(X_train, y_train)\n",
     "X_test = rfe.transform(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8556048645974019"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "X_train = pf.fit_transform(X_train)\n",
-    "X_test = pf.transform(X_test)"
+    "model = RandomForestRegressor(random_state=42)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "model.score(X_test, y_test, )"
    ]
   },
   {
@@ -284,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +272,7 @@
        "array([1, 7, 5, 8, 2, 1, 3, 1, 6, 1, 1, 4, 1])"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,27 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RandomForestRegressor(random_state=42)"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +308,7 @@
        "True"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
