--- a/Feature_selection.ipynb
+++ b/Feature_selection.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,16 +46,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(pd.DataFrame(X, columns = feature_names), pd.Series(y, name='label'), test_size = .2, random_state=1)"
+    "X_train, X_test, y_train, y_test = train_test_split(pd.DataFrame(X, columns = feature_names), pd.Series(y, name='label'), test_size = .2, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,16 +74,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7634174432138474\n",
-      "3.750712180838916\n",
-      "0.18776351124030624\n"
+      "0.668759493535632\n",
+      "3.1890919658878483\n",
+      "0.16866394539378712\n"
      ]
     }
    ],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "0.8920995891343227"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,149 +253,141 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 116,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "rfe = RFE(estimator=model, )"
+    "### by sklearn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rfe_ = RFE(estimator=model, n_features_to_select=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 7, 5, 8, 2, 1, 3, 1, 6, 1, 1, 4, 1])"
+       "array([1, 8, 6, 9, 3, 1, 4, 1, 7, 2, 1, 5, 1])"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rfe.fit(X_train, y_train)\n",
+    "rfe_.fit(X_train, y_train)\n",
     "\n",
-    "rfe.ranking_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result = np.zeros(feature_names.size)\n",
-    "rk = np.argsort(model.feature_importances_)\n",
-    "ch = int(feature_names.size/2)\n",
-    "result[rk[-ch:]] = 1\n",
-    "\n",
-    "result[rk[:-ch]] = np.arange(feature_names.size - ch +1, 1, -1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 119,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.alltrue(result == rfe.ranking_)"
+    "rfe_.ranking_"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sequencial Feature Selection: forward"
+    "### implementation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sfs = SequentialFeatureSelector(estimator=model, cv=3)"
+    "class rfe:\n",
+    "    def __init__(self, estimator, n_select = None):\n",
+    "        self.estimator  = clone(estimator)\n",
+    "        self.n_select = n_select\n",
+    "        \n",
+    "    def fit(self, X, y):\n",
+    "        self.n_features_ori = X.shape[1]\n",
+    "        result = np.ones(self.n_features_ori, dtype=int)\n",
+    "        \n",
+    "        if self.n_select is None:\n",
+    "            self.n_features = self.n_features_ori//2\n",
+    "        else:\n",
+    "            self.n_features = self.n_select\n",
+    "        \n",
+    "        n = 0\n",
+    "        while n < self.n_features_ori - self.n_features:\n",
+    "            self.estimator.fit(X * np.array(result==1, dtype = int), y)\n",
+    "            try:\n",
+    "                rk = np.argsort(self.estimator.feature_importances_)\n",
+    "            except:\n",
+    "                rk = np.argsort(np.square(self.estimator.coef_.flatten()))\n",
+    "            \n",
+    "            min_idx = rk[:n+1]\n",
+    "            result[min_idx] += 1 \n",
+    "            n += 1\n",
+    "\n",
+    "        \n",
+    "        #result[rk[-self.n_features:]] = 1\n",
+    "        #result[rk[:-self.n_features]] = np.arange(self.n_features_ori - self.n_features +1, 1, -1)\n",
+    "        \n",
+    "        self.ranking = result\n",
+    "        self.support = result == 1\n",
+    "        \n",
+    "        return None\n",
+    "    \n",
+    "    def transform(self, X):\n",
+    "        return X[:, self.support]\n",
+    "        \n",
+    "    def fit_transform(self, X, y):\n",
+    "        if y is None:\n",
+    "            return self.fit(X).transform(X)\n",
+    "        else:\n",
+    "            return self.fit(X, y).transform(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rfe0 = rfe(model, n_select=5)\n",
+    "rfe0.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([False, False, False, False,  True,  True, False, False,  True,\n",
-       "        True,  True, False,  True])"
+       "array([1, 8, 6, 9, 3, 1, 4, 1, 7, 2, 1, 5, 1])"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sfs.fit(X_train, y_train)\n",
-    "\n",
-    "sfs.support_"
+    "rfe0.ranking"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 120,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "features_support = np.zeros(X_train.shape[1], dtype = bool)"
+    "### comparison"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_select = X_train.shape[1]//2\n",
-    "n_cv =3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for _ in range(n_select):\n",
-    "    non_selected = np.flatnonzero(~features_support)\n",
-    "    dict_score = dict()\n",
-    "    for f in non_selected:\n",
-    "        candidates = features_support.copy()\n",
-    "        candidates[f] = True\n",
-    "        cvs = cross_val_score(estimator=model, X= X_train[:, candidates], y= y_train, cv=n_cv).mean()\n",
-    "        dict_score[f] = cvs\n",
-    "    selected = max(dict_score, key=lambda x: dict_score[x])\n",
-    "    features_support[selected] = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -404,13 +396,209 @@
        "True"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.alltrue(features_support==sfs.support_)"
+    "np.alltrue(rfe0.ranking == rfe_.ranking_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.alltrue(rfe0.transform(X_train)==rfe_.transform(X_train))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sequencial Feature Selection: forward and backward"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### by sklearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sfs_ = SequentialFeatureSelector(estimator=model_lr, direction='backward', )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False, False,  True,  True, False,  True, False,\n",
+       "       False,  True,  True,  True])"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sfs_.fit(X_train, y_train)\n",
+    "\n",
+    "sfs_.support_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class sfs:\n",
+    "    def __init__(self, estimator, n_select = None, cv = 5, direction = 'forward'):\n",
+    "        self.estimator = clone(estimator)\n",
+    "        self.n_select = n_select\n",
+    "        self.cv = cv\n",
+    "        self.direction = direction\n",
+    "    \n",
+    "    def fit(self, X, y):\n",
+    "        self.n_features_ori = X.shape[1]\n",
+    "        if self.n_select is None:\n",
+    "            self.n_features = self.n_features_ori//2\n",
+    "        else:\n",
+    "            self.n_features = self.n_select\n",
+    "        if self.direction == 'backward':\n",
+    "            self.n_features = self.n_features_ori - self.n_features\n",
+    "        \n",
+    "        self.support = np.zeros(self.n_features_ori, dtype = bool)\n",
+    "        \n",
+    "        for _ in range(self.n_features):\n",
+    "            non_selected = np.flatnonzero(~self.support)\n",
+    "            dict_score = dict()\n",
+    "            for f in non_selected:\n",
+    "                candidates = self.support.copy()\n",
+    "                candidates[f] = True\n",
+    "                if self.direction == 'backward':\n",
+    "                    candidates = ~candidates\n",
+    "                cvs = cross_val_score(estimator=self.estimator, X = X[:, candidates], y= y, cv=self.cv).mean()\n",
+    "                dict_score[f] = cvs\n",
+    "            selected = max(dict_score, key=lambda x: dict_score[x])\n",
+    "            self.support[selected] = True\n",
+    "        \n",
+    "        if self.direction == 'backward':\n",
+    "            self.support = ~self.support\n",
+    "            \n",
+    "        return None\n",
+    "    \n",
+    "    def transform(self, X):\n",
+    "        return X[:, self.support]\n",
+    "    \n",
+    "    def fit_transform(self, X, y):\n",
+    "        if y is None:\n",
+    "            return self.fit(X).transform(X)\n",
+    "        else:\n",
+    "            return self.fit(X, y).transform(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False, False,  True,  True, False,  True, False,\n",
+       "       False,  True,  True,  True])"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sfs0 = sfs(estimator=model_lr, direction='backward', )\n",
+    "sfs0.fit(X_train, y_train)\n",
+    "\n",
+    "sfs0.support"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.alltrue(sfs_.support_ == sfs0.support)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.alltrue(sfs_.transform(X_train)==sfs0.transform(X_train))"
    ]
   },
   {
@@ -421,8 +609,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### by sklearn"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +636,7 @@
        "       False, False, False,  True])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +658,7 @@
        "0.07692307692307693"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,28 +668,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 28,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.07692307692307693"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "model.feature_importances_.mean()"
+    "### implementation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +688,6 @@
     "    def fit(self, X, y):\n",
     "        self.estimator.fit(X, y)\n",
     "        \n",
-    "    def get_support(self):\n",
     "        try:\n",
     "            self.importance = self.estimator.feature_importances_\n",
     "        except:\n",
@@ -519,12 +700,19 @@
     "        else:\n",
     "            self.threshold = self.strategy.copy()\n",
     "            \n",
-    "        return self.importance > self.threshold"
+    "        self.support = self.importance > self.threshold\n",
+    "        return None\n",
+    "    \n",
+    "    def transform(self, X):\n",
+    "        return X[:, self.support]\n",
+    "    \n",
+    "    def fit_transform(self, X, y):\n",
+    "        return self.fit(X, y).transform(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +731,7 @@
        "       False, False, False,  True])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,12 +739,19 @@
    "source": [
     "sfm0.fit(X_train, y_train)\n",
     "\n",
-    "sfm0.get_support()"
+    "sfm0.support"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### comparison"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -565,13 +760,33 @@
        "True"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.alltrue(sfm0.get_support() == sfm.get_support())"
+    "np.alltrue(sfm.get_support() == sfm0.support)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.alltrue(sfm.transform(X_train) == sfm0.transform(X_train))"
    ]
   },
   {
