docs: Modify comments

--- a/Feature_selection.ipynb
+++ b/Feature_selection.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -261,6 +268,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.8       , 0.2       , 0.4       , 0.4       ],\n",
+       "       [0.        , 0.30151134, 0.90453403, 0.30151134],\n",
+       "       [0.5       , 0.7       , 0.5       , 0.1       ]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import Normalizer\n",
+    "X = [[4, 1, 2, 2],\n",
+    "     [0, 3, 9, 3],\n",
+    "     [5, 7, 5, 1]]\n",
+    "transformer = Normalizer().fit(X)  # fit does nothing.\n",
+    "transformer\n",
+    "\n",
+    "transformer.transform(X)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 145,
    "metadata": {},
    "outputs": [],
@@ -328,11 +364,7 @@
     "            min_idx = rk[:n+1]\n",
     "            result[min_idx] += 1 \n",
     "            n += 1\n",
-    "\n",
-    "        \n",
-    "        #result[rk[-self.n_features:]] = 1\n",
-    "        #result[rk[:-self.n_features]] = np.arange(self.n_features_ori - self.n_features +1, 1, -1)\n",
-    "        \n",
+    "       \n",
     "        self.ranking = result\n",
     "        self.support = result == 1\n",
     "        \n",
