fix: Modify code line of SelectFromModel used if threshold is median

--- a/Feature_selection.ipynb
+++ b/Feature_selection.ipynb
@@ -732,7 +732,7 @@
     "        else:\n",
     "            self.threshold = self.strategy.copy()\n",
     "            \n",
-    "        self.support = self.importance > self.threshold\n",
+    "        self.support = self.importance >= self.threshold\n",
     "        return None\n",
     "    \n",
     "    def transform(self, X):\n",
