--- a/Feature_selection.ipynb
+++ b/Feature_selection.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
        "0.8920995891343227"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,35 +264,6 @@
    "metadata": {},
    "source": [
     "### by sklearn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.8       , 0.2       , 0.4       , 0.4       ],\n",
-       "       [0.        , 0.30151134, 0.90453403, 0.30151134],\n",
-       "       [0.5       , 0.7       , 0.5       , 0.1       ]])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn.preprocessing import Normalizer\n",
-    "X = [[4, 1, 2, 2],\n",
-    "     [0, 3, 9, 3],\n",
-    "     [5, 7, 5, 1]]\n",
-    "transformer = Normalizer().fit(X)  # fit does nothing.\n",
-    "transformer\n",
-    "\n",
-    "transformer.transform(X)\n"
    ]
   },
   {
@@ -473,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +463,7 @@
        "       False,  True,  True,  True])"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +545,7 @@
        "       False,  True,  True,  True])"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,12 +561,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### comparison"
+    "### comparison: backward"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +575,7 @@
        "True"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -624,13 +595,46 @@
        "True"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.alltrue(sfs_.transform(X_train)==sfs0.transform(X_train))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### comparison: forward"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sfs_ = SequentialFeatureSelector(estimator=model_lr, direction='forward', )\n",
+    "sfs_.fit(X_train, y_train)\n",
+    "\n",
+    "sfs0 = sfs(estimator=model_lr, direction='forward', )\n",
+    "sfs0.fit(X_train, y_train)\n",
+    "\n",
+    "np.alltrue(sfs_.support_ == sfs0.support)"
    ]
   },
   {
