feat: Add code finding the best n selection

--- a/Feature_selection.ipynb
+++ b/Feature_selection.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
        "       False,  True,  True,  True])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,6 +505,8 @@
     "        \n",
     "        self.support = np.zeros(self.n_features_ori, dtype = bool)\n",
     "        \n",
+    "        self.scores = np.array([])\n",
+    "        \n",
     "        for _ in range(self.n_features):\n",
     "            non_selected = np.flatnonzero(~self.support)\n",
     "            dict_score = dict()\n",
@@ -516,8 +518,9 @@
     "                cvs = cross_val_score(estimator=self.estimator, X = X[:, candidates], y= y, cv=self.cv).mean()\n",
     "                dict_score[f] = cvs\n",
     "            selected = max(dict_score, key=lambda x: dict_score[x])\n",
+    "            self.scores = np.append(self.scores, dict_score[selected])\n",
     "            self.support[selected] = True\n",
-    "        \n",
+    "        self.best_n_select = np.argmax(self.scores) + 1\n",
     "        if self.direction == 'backward':\n",
     "            self.support = ~self.support\n",
     "            \n",
@@ -535,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +548,7 @@
        "       False,  True,  True,  True])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +578,7 @@
        "True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -595,13 +598,54 @@
        "True"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.alltrue(sfs_.transform(X_train)==sfs0.transform(X_train))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.7256365 , 0.72601528, 0.72612216, 0.72353299, 0.71988332,\n",
+       "       0.71780413, 0.71291874])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sfs0.scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sfs0.best_n_select"
    ]
   },
   {
