--- a/Feature_selection.ipynb
+++ b/Feature_selection.ipynb
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
        "       False,  True,  True,  True])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,16 +483,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "class sfs:\n",
-    "    def __init__(self, estimator, n_select = None, cv = 5, direction = 'forward'):\n",
+    "    def __init__(self, estimator, n_select = None, stop_when_best = False,cv = 5, direction = 'forward'):\n",
     "        self.estimator = clone(estimator)\n",
     "        self.n_select = n_select\n",
     "        self.cv = cv\n",
     "        self.direction = direction\n",
+    "        self.stop_when_best = stop_when_best\n",
     "    \n",
     "    def fit(self, X, y):\n",
     "        self.n_features_ori = X.shape[1]\n",
@@ -518,8 +519,20 @@
     "                cvs = cross_val_score(estimator=self.estimator, X = X[:, candidates], y= y, cv=self.cv).mean()\n",
     "                dict_score[f] = cvs\n",
     "            selected = max(dict_score, key=lambda x: dict_score[x])\n",
+    "            \n",
     "            self.scores = np.append(self.scores, dict_score[selected])\n",
-    "            self.support[selected] = True\n",
+    "            \n",
+    "            if self.stop_when_best:\n",
+    "                if self.scores.size<2:\n",
+    "                    self.support[selected] = True\n",
+    "                else:\n",
+    "                    if self.scores[-1] > self.scores[-2]:\n",
+    "                        self.support[selected] = True\n",
+    "                    else:\n",
+    "                        break\n",
+    "            else:\n",
+    "                self.support[selected] = True\n",
+    "            \n",
     "        self.best_n_select = np.argmax(self.scores) + 1\n",
     "        if self.direction == 'backward':\n",
     "            self.support = ~self.support\n",
@@ -538,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +561,7 @@
        "       False,  True,  True,  True])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +591,7 @@
        "True"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +611,7 @@
        "True"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +632,7 @@
        "       0.71780413, 0.71291874])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,6 +659,50 @@
    ],
    "source": [
     "sfs0.best_n_select"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True, False, False,  True,  True,  True, False,  True,  True,\n",
+       "        True,  True,  True,  True])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sfs1 = sfs(estimator=model_lr, direction='backward', stop_when_best= True)\n",
+    "sfs1.fit(X_train, y_train)\n",
+    "\n",
+    "sfs1.support"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.7256365 , 0.72601528, 0.72612216, 0.72353299])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sfs1.scores"
    ]
   },
   {
