--- a/Linear_regression.ipynb
+++ b/Linear_regression.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
     "        \n",
     "    def predict(self, X):\n",
     "        X_ = np.append(np.ones((X.shape[0], 1)), X, axis=1)\n",
-    "        return X.dot(self.beta)\n",
+    "        return X_.dot(self.beta)\n",
     "    \n",
     "    def summary(self, feature_names = None, round_decimals=3, alpha=0.05):\n",
     "        res_min = self.residual.min()\n",
@@ -135,6 +135,88 @@
    "metadata": {},
    "source": [
     "# Train: Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = LinearRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "pred = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr = linear_regression()\n",
+    "lr.fit(X_train, y_train)\n",
+    "pred_ = lr.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28.09349529811247"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred_[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28.093495298112458"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose(pred,pred_)"
    ]
   },
   {
