docs: Remove redudant cells and do Numbering

--- a/Linear_regression.ipynb
+++ b/Linear_regression.ipynb
@@ -138,6 +138,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## by sklearn"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -149,6 +156,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## by my code"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -157,46 +171,6 @@
     "lr = linear_regression()\n",
     "lr.fit(X_train, y_train)\n",
     "pred_ = lr.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "28.09349529811247"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pred_[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "28.093495298112458"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pred[1]"
    ]
   },
   {
@@ -216,7 +190,7 @@
     }
    ],
    "source": [
-    "np.allclose(pred,pred_)"
+    "np.allclose(pred, pred_)"
    ]
   },
   {
@@ -259,6 +233,13 @@
     "lr = linear_regression()\n",
     "lr.fit(X_train, y_train)\n",
     "lr.summary(feature_names=feature_names)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## validation by statsmodels library"
    ]
   },
   {
