docs: Modify formulae

--- a/Paper implementation_PCA.ipynb
+++ b/Paper implementation_PCA.ipynb
@@ -473,6 +473,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And $\\large Q$ is an unitary matrix i.e. $\\large Q Q^* = I_{p\\times p}$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -512,7 +519,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\large \\mathrm{Cov}(X) = Q \\Lambda Q^{-1} = Q \\Lambda Q^T$"
+    "$\\large \\mathrm{Cov}(X) = Q \\Lambda Q^{-1} = Q \\Lambda Q^*$\n",
+    "\n",
+    "$\\large \\mathrm{Cov}(X) = Q \\Lambda Q^T$ if $Q$ is a real matrix."
    ]
   },
   {
@@ -539,7 +548,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\large X_{pca} = X_{standardized} \\times \\begin{bmatrix} V_{1} & V_{2} \\end{bmatrix}$ where v1, v2 are the first two columns of eigenvectors $Q$."
+    "$\\large X_{pca} = X_{standardized} \\times \\begin{bmatrix} \\mathbf{q}_{1} & \\mathbf{q}_{2} \\end{bmatrix}$ where q1, q2 are the first two columns of eigenvectors $Q$."
    ]
   },
   {
@@ -601,7 +610,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\large X = U S V^*$"
+    "$\\large X_{standardized} = U S V^*$"
    ]
   },
   {
@@ -734,7 +743,7 @@
     }
    ],
    "source": [
-    "np.allclose(evectors, v)"
+    "np.allclose(v, evectors)"
    ]
   },
   {
